# hLLVM

./: .gitignore  .travis.yml  CHANGES  HsLlvm.cabal  LICENSE  Llvm.cabal  README.md  TODO  config.sh  hLLVM.cabal  local_tc_runtest_1.sh  tc_runtest.sh
hooplext-3.10.0.2/: README.txt  hoopl.cabal
hooplext-3.10.0.2/src/Compiler/Hoopl/: Fuel.hs  Unique.hs  a.ps
runtime/: check_int.c  check_int.c~
scripts/: check_int.c  clang++-emp-hirverify  clang-emp-hirverify  clone_LLVM_codes.sh  cmd_template.sh  enviroment.sh  genLlTestCode.sh  genhpcreport.sh  hirverify.sh  install.sh  llcodegen.sh  runLlvmCheck.sh  runLlvmPass.sh  runLlvmTest.sh  strip.sh
src/: Ast2IrTester.hs  Ir2AstTester.hs  LlvmTest.hs  ParserTester.hs
src/Llvm/: Asm.hs  AsmHirConversion.hs  ErrorLoc.hs  Hir.hs  Matcher.hs
src/Llvm/Asm/: Data.hs  Parser.hs  README.md  SharedEntity.hs  Simplification.hs  Syntax.hs
src/Llvm/Asm/Data/: AtomicEntity.hs  DataLayout.hs  Default.hs  Module.hs  SimpleConst.hs  Type.hs
src/Llvm/Asm/Parser/: Basic.hs  Block.hs  Const.hs  DataLayout.hs  Instruction.hs  Module.hs  Rhs.hs  Type.hs
src/Llvm/Asm/Printer/: Common.hs  LlvmPrint.hs  SharedEntityPrint.hs
src/Llvm/AsmHirConversion/: AsmToHir.hs  CallSpecialization.hs  HirToAsm.hs  IntrinsicsSpecialization.hs  LabelMapM.hs  MapLabels.hs  Specialization.hs  TypeConversion.hs
src/Llvm/AsmParser/: Basic.hs  Block.hs  Const.hs  DataLayout.hs  Instruction.hs  Module.hs  Rhs.hs  Type.hs
src/Llvm/AsmPrinter/: Common.hs  IrPrint.hs  LlvmPrint.hs  SharedEntityPrint.hs
src/Llvm/Control/: Context.hs  State.hs
src/Llvm/Data/: Ast.hs  AstSimplify.hs  Conversion.hs  Convert.hs  CoreIr.hs  DynSafeIr.hs  Ir.hs  IrType.hs  LabelMapM.hs  Shared.hs  SharedEntity.txt  Type.hs
src/Llvm/Data/Conversion/: AstIrConversion.hs  AstScanner.hs  AstSimplification.hs  IntrinsicsSpecialization.hs  IrAstConversion.hs  LabelMapM.hs  TypeConversion.hs
src/Llvm/Data/Convert/: AstIrConvert.hs  AstSimplify.hs  LabelMapM.hs
src/Llvm/Data/Shared/: AtomicEntity.hs  DataLayout.hs  README.txt  SimpleConst.hs  Type.hs  Util.hs
src/Llvm/Hir/: Cast.hs  Composer.hs  Data.hs  DataLayoutMetrics.hs  Internalization.hs  Mangle.hs  Print.hs  README.md  Target.hs
src/Llvm/Hir/Data/: Commentor.hs  DataLayoutInfo.hs  Inst.hs  Module.hs  README.md  Type.hs
src/Llvm/Pass/: CfCxtTransform.hs  Changer.hs  CodeGenMonad.hs  CodeMonad.hs  DataUsage.hs  Dominator.hs  DynSafeRwGlobal.hs  IrBuild.hs  Liveness.hs  Mem2Reg.hs  NormalGraph.hs  Optimizer.hs  PassManager.hs  PassTester.hs  PhiElimination.hs  PhiFixUp.hs  RewriteDef.hs  RewriteUse.hs  Rewriter.hs  RewriterEx.hs  SizeofVerification.hs  Substitution.hs  Uda.hs  Visualization.hs
src/Llvm/Query/: Ast.hs  ConstValue.hs  Conversion.hs  Hir.hs  HirCxt.hs  HirType.hs  Ir.hs  IrCxt.hs  Qerror.hs  Translucent.hs  Type.hs  TypeConstValue.hs  TypeDef.hs  Uda.hs
src/Llvm/Syntax/Parser/: Basic.hs  Block.hs  Const.hs  DataLayout.hs  Instruction.hs  Module.hs  Rhs.hs  Type.hs
src/Llvm/Syntax/Printer/: Common.hs  IrPrint.hs  LlvmPrint.hs  SharedEntityPrint.hs
src/Llvm/Util/: Mapping.hs  Monadic.hs
src/Llvm/VmCore/: AsmWriter.hs  Ast.hs  Ast2Ir.hs  AstAttribute.hs  AstCanonicalization.hs  AstSimplify.hs  AstWriter.hs  AtomicEntity.hs  AtomicEntityWriter.hs  CodeAttribute.hs  Convert.hs  Converter.hs  CoreIr.hs  CoreIrWriter.hs  DataLayout.hs  DataLayoutWriter.hs  Ir.hs  Ir2Ast.hs  IrWriter.hs  LabelMap.hs  LabelMapM.hs  SharedEntity.hs  SharedEntityWriter.hs
test/: pkg-config.ll  runLlvmCheck.sh  runLlvmTest.sh  test1.ll
