Name:  HsLlvm350
Version: 1.0.0.0
Description:  Haskell implementation of LLVM 
License: BSD3
License-file: LICENSE
Author: Ning Wang
Maintainer: email@ningwang.org
Build-Type: Simple
Cabal-Version: >= 1.6
Stability: 0.1
Synopsis: A library for processing LLVM Assembly
Category: Compilers/Interpreters


Library 
  Build-Depends:     base >= 3 && < 5, 
                     containers, 
                     array, 
                     bytestring, 
                     mtl,
                     filepath,
                     directory,
                     hoopl == 3.10.0.2,
                     parsec >=3.1.2 && <3.2,
                     cmdargs >=0.10 && <0.11,
                     transformers >= 0.3.0.0,
                     pretty >= 1.1.1.1

  Exposed-modules:   Llvm.Data.Ast,
                     Llvm.Data.CoreIr,
                     Llvm.Data.Ir,
                     Llvm.Data.Shared,
                     Llvm.Data.Shared.AtomicEntity,
                     Llvm.Data.Shared.SimpleConst,
                     Llvm.Data.Shared.Type,
                     Llvm.Data.Shared.DataLayout,
                     Llvm.Data.Conversion,
                     Llvm.Data.Conversion.AstSimplification,
                     Llvm.Data.Conversion.AstIrConversion,
                     Llvm.Data.Conversion.LabelMapM,
                     Llvm.Util.Mapping, 
                     Llvm.Util.Monadic, 
                     Llvm.Query.Type,
                     Llvm.Syntax.Printer.Common,
                     Llvm.Syntax.Printer.SharedEntityPrint,
                     Llvm.Syntax.Printer.IrPrint,
                     Llvm.Syntax.Printer.LlvmPrint,
                     Llvm.Syntax.Parser.Basic,
                     Llvm.Syntax.Parser.Block,
                     Llvm.Syntax.Parser.Const,
                     Llvm.Syntax.Parser.Instruction,
                     Llvm.Syntax.Parser.Module,
                     Llvm.Syntax.Parser.Rhs,
                     Llvm.Syntax.Parser.Type,
                     Llvm.Pass.Dominator,
                     Llvm.Pass.Liveness,
                     Llvm.Pass.Mem2Reg,
                     Llvm.Pass.NormalGraph,
                     Llvm.Pass.Optimizer,
                     Llvm.Pass.PassManager,
                     Llvm.Pass.PhiFixUp,
                     Llvm.Pass.Rewriter,
                     Llvm.Pass.Uda,
                     ParserTester
--  ghc-options:       -Wall -fno-warn-name-shadowing
  Extensions:        CPP 
  hs-source-dirs:    src


Executable llvm-test
  Main-is:           LlvmTest.hs
  hs-source-dirs:    src
