name:  hLLVM
version: 0.6.0.0
license: BSD3
license-file: LICENSE
author: Ning Wang <email@ningwang.org>
maintainer: Ning Wang <email@ningwang.org>
build-Type: Simple
cabal-Version: >= 1.20
stability: 0.3
synopsis: A library for analyzing and transforming LLVM (3.5) assembly codes
category: Compilers/Interpreters
description:  A pure Haskell library for analyzing and transforming LLVM assembly codes. It includes:
              1) a parser to parse LLVM code in its text form; 
              2) an internal IR that is designed for Hoopl and direct composition; 
              3) a set of utility functions to convert LLVM AST to and from the internal IR; 
              4) a set of utility functions to query the IR.

extra-source-files:  README.md, LICENSE, CHANGES, TODO

source-repository head
  type:     git
  location: https://github.com/mlite/hLLVM.git



flag debug 
  description: Enable debug support
  default:     False

flag testcoverage 
  description: Enable test coverage report
  default: False

library 
  default-language:  Haskell2010
  build-depends:     base >= 3 && < 5,
                     containers,
                     array,
                     bytestring,
                     mtl,
                     filepath,
                     directory,
                     hoopl >= 3.10.1.0,
                     parsec >=3.1.2 && <3.2,
                     cmdargs >=0.10 && <0.11,
                     transformers >= 0.3.0.0,
                     pretty >= 1.1.1.1,
                     data-dword == 0.3,
                     template-haskell >= 2.9.0.0
  hs-source-dirs:    src
  exposed-modules:   Llvm.Asm.Data.Module,
                     Llvm.Asm.Data.Type,
                     Llvm.Asm.Data.AtomicEntity,
                     Llvm.Asm.Data.SimpleConst,
                     Llvm.Asm.Data.DataLayout,
                     Llvm.Asm.Data,
                     Llvm.Asm.SharedEntity,
                     Llvm.Asm.Simplification,
                     Llvm.Asm.Printer.Common,
                     Llvm.Asm.Printer.SharedEntityPrint,
                     Llvm.Asm.Printer.LlvmPrint,
                     Llvm.Asm.Parser.Basic,
                     Llvm.Asm.Parser.Block,
                     Llvm.Asm.Parser.Const,
                     Llvm.Asm.Parser.DataLayout,
                     Llvm.Asm.Parser.Instruction,
                     Llvm.Asm.Parser.Module,
                     Llvm.Asm.Parser.Rhs,
                     Llvm.Asm.Parser.Type,
                     Llvm.Asm,
                     Llvm.AsmHirConversion,
                     Llvm.AsmHirConversion.AsmToHir,
                     Llvm.AsmHirConversion.HirToAsm,
                     Llvm.AsmHirConversion.IntrinsicsSpecialization,
                     Llvm.AsmHirConversion.TypeConversion,
                     Llvm.AsmHirConversion.LabelMapM,
                     Llvm.Hir.Data.Inst,
                     Llvm.Hir.Data.Module,
                     Llvm.Hir.Data.Type,
                     Llvm.Hir.Data.DataLayoutInfo,
                     Llvm.Hir.Data.Commentor,
                     Llvm.Hir.Data,
                     Llvm.Hir.Composer,
                     Llvm.Hir.Cast,
                     Llvm.Hir.Internalization,
                     Llvm.Hir.Mangle,
                     Llvm.Hir.Print,
                     Llvm.Hir,
                     Llvm.Util.Mapping,
                     Llvm.Util.Monadic,
                     Llvm.Query.Qerror,
                     Llvm.Query.Conversion,
                     Llvm.Query.HirCxt,
                     Llvm.Query.Hir,
                     Llvm.Query.HirType,
                     Llvm.Query.Uda,
                     Llvm.Pass.Dominator,
                     Llvm.Pass.Liveness,
                     Llvm.Pass.Mem2Reg,
                     Llvm.Pass.NormalGraph,
                     Llvm.Pass.Optimizer,
                     Llvm.Pass.PassManager,
                     Llvm.Pass.PhiFixUp,
                     Llvm.Pass.Rewriter,
                     Llvm.Pass.PassTester,
                     Llvm.Pass.CodeGenMonad,
                     Llvm.Pass.Changer,
                     Llvm.Pass.Substitution,
                     Llvm.Pass.Visualization,
                     Llvm.Pass.SizeofVerification,
                     Llvm.Pass.DataUsage,
                     Llvm.ErrorLoc,
                     ParserTester 
  other-extensions: CPP

executable llvm-test
  default-language:  Haskell2010
  main-is:           LlvmTest.hs
  hs-source-dirs:    src
  build-depends:     base >= 3 && < 5,
                     containers,
                     array,
                     bytestring,
                     mtl,
                     filepath,
                     directory,
                     template-haskell >= 2.9.0.0,
                     hoopl >= 3.10.1.0,
                     parsec >=3.1.2 && <3.2,
                     cmdargs >=0.10 && <0.11,
                     transformers >= 0.3.0.0,
                     pretty >= 1.1.1.1,
                     data-dword == 0.3
  if flag(debug) {
     if !os(windows) {
        cc-options: -DDEBUG
     } else {
        cc-options: -DNDEBUG
    }
  }
  if flag(testcoverage) {
    ghc-options: -fhpc
  }
